# angel-communication

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cli/: cli_main.cpp  main.cpp
framework/: angel.h  conversation.cpp  conversation.h  lexer.cpp  lexer.h  persona.cpp  persona.h  sentence.cpp  sentence.h  string.cpp  string.h  wordtypes.cpp  wordtypes.h
irc/: irc_backend.cpp  irc_backend.h  irc_main.cpp
test/: test.txt  test_main.cpp
